@@ -9,18 +9,33 @@ import java.nio.file.*; import java.util.UUID;
 
 @Service
 public class FileStorageService {
-    @Value("${app.upload-dir}") private String uploadDir;
+    @Value("${app.upload-dir:./uploads}")
+    private String uploadDir;
 
     public String save(MultipartFile file, String subDir){
         try{
             String ext = getExt(file.getOriginalFilename());
-            String name = UUID.randomUUID() + (ext.isEmpty()? "" : "."+ext);
-            Path dir = Path.of(uploadDir, subDir); Files.createDirectories(dir);
-            file.transferTo(dir.resolve(name).toFile());
-            return ("/files/"+subDir+"/"+name).replace("//","/");
-        }catch(Exception e){ throw new RuntimeException(e); }
+            String name = java.util.UUID.randomUUID() + (ext.isEmpty()? "" : "."+ext);
+
+            java.nio.file.Path root = java.nio.file.Paths.get(uploadDir).toAbsolutePath().normalize();
+            java.nio.file.Path dir  = root.resolve(subDir).normalize();
+            java.nio.file.Files.createDirectories(dir);
+
+            java.nio.file.Path target = dir.resolve(name);
+            file.transferTo(target.toFile());
+
+            // 리소스 핸들러 경로 규칙과 맞추기
+            return ("/files/" + subDir.replace("\\","/") + "/" + name).replace("//","/");
+        } catch(Exception e){
+            throw new RuntimeException("파일 저장 실패: " + e.getMessage(), e);
+        }
     }
-    private String getExt(String fn){ if (fn==null) return ""; int i=fn.lastIndexOf('.'); return (i<0)?"":fn.substring(i+1); }
+
+    private String getExt(String fn){
+        if (fn == null) return "";
+        int i = fn.lastIndexOf('.');
+        return (i < 0) ? "" : fn.substring(i+1);
+    }
 }
 
 
